
2020-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): changed NULL-checked fields to
	  generate calls to (cob_dump_field) to keep formatting and control there
	  instead of preformatting with use of message-related (cob_dump_output);
	  fixed output for based-check'd OCCURS 01 and comment-only output

2020-12-01  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): emit code to check if BASED/LINKAGE fields
	  have a not NULL base address before dumping them; handle depending_on

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_dump_code): moved out of (output_internal_function)
	* codegen.c (output_dump_code): generate "end of dump" message
	* codegen.c (output_display_fields): always output group OCCURS items,
	  not only the first time; removed duplicated code

2020-11-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Only emit the 'i_len' variable if it is used
	* pplex.l: When searching for COPY book, use 'stat' to verify its a file

2020-11-27  Ron Norman <rjn@inglenet.com>

	* codegen.c,typeck.c,parser.y,tree.h: 
			Optimize subscript checking when SEARCHing table
			Emit check for valid subscript on entry to SEARCH logic

2020-11-25  Ron Norman <rjn@inglenet.com>

	* codegen.c: Additional work to enhance INITIALIZE

2020-11-23  Ron Norman <rjn@inglenet.com>

	* codegen.c: Generated code for INITIALIZE enhanced to emit progressive
			'memcpy' to speed up the process
			If size is not known until run time then emit call to
			cob_init_table

2020-11-18  Ron Norman <rjn@inglenet.com>

	* codegen.c,typeck.c: Generated code for INITIALIZE computes the actual
	  length for OCCURS DEPENDING on x UNBOUNDED before doing the initialize

2020-11-11  Ron Norman <rjn@inglenet.com>

	* codegen.c: Emit correct code for -debug within C function calls

2020-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): adjusted OCCURS initialization